Update Task 1- Predicting Using Supervised ML.ipynb

--- a/Task 1- Predicting Using Supervised ML.ipynb
+++ b/Task 1- Predicting Using Supervised ML.ipynb
@@ -11,7 +11,7 @@
     " # Task 1 . Predicting Using Supervised ML\n",
     " # (Predict the percentage of marks a student can score based on the number of hours he dedicates on his studies.)\n",
     "\n",
-    "# BY Diksha Hiwase."
+    "# by Diksha Hiwase."
    ]
   },
   {
