Update Task 1- Predicting Using Supervised ML.ipynb

--- a/Task 1- Predicting Using Supervised ML.ipynb
+++ b/Task 1- Predicting Using Supervised ML.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# GRIP: The Sparks Foundation\n",
     "\n",
-    "# Data Science & Business Analytics Intern¶\n",
+    "# Data Science & Business Analytics Intern\n",
     "\n",
     " # Task 1 . Predicting Using Supervised ML\n",
     " # (Predict the percentage of marks a student can score based on the number of hours he dedicates on his studies.)\n",
