--- a/Task 1- Predicting Using Supervised ML.ipynb
+++ b/Task 1- Predicting Using Supervised ML.ipynb
@@ -11,6 +11,7 @@
     " # Task 1 . Predicting Using Supervised ML\n",
     " # (Predict the percentage of marks a student can score based on the number of hours he dedicates on his studies.)\n",
     "\n",
+    "#What will be predicted score if a student studies for 9.25 hrs/ day?\n"
     "# by Diksha Hiwase."
    ]
   },
